# 30-day-cohorts-webapp

./: .dockerignore  .gitignore  AGENTS.md  AI_GUIDELINES.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  Dockerfile.production  Dockerfile.stripe  Makefile  README.md  database.dbml  docker-compose.yml  env.example  manage.py  pyproject.toml
accounts/: admin.py  api.py  api_urls.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_userprofile_email_weekly_reminder_and_more.py  0003_alter_userprofile_email_daily_reminder_and_more.py  0004_userprofile_view_past_submissions.py
admin_tools/: apps.py  urls.py  views.py
checkins/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
checkins/migrations/: 0001_initial.py
cohort_designs/: 30day_digital_decluttter.json
cohorts/: admin.py  apps.py  contexts.py  decorators.py  email_reminders.py  forms.py  models.py  seed.py  services.py  signals.py  survey_views.py  surveys.py  tasks.py  test_cohort_import.py  test_email_reminders.py  test_onboarding.py  test_tasks.py  tests.py  urls.py  utils.py  views.py
cohorts/migrations/: 0001_initial.py  0002_remove_cohort_price_cents_cohort_is_paid_and_more.py  0003_taskscheduler.py  0004_taskscheduler_survey_and_more.py  0005_usersurveyresponse.py  0006_alter_taskscheduler_day_of_week.py  0007_cohort_enrollment_end_date_and_more.py  0008_add_email_send_log.py  (+4 more)
config/: apps.py  urls.py  wsgi.py
core/: urls.py  views.py
dashboard/: urls.py  views.py
docs/: ADMINISTRATION.md  RAILWAY_DEPLOY_NOTES
health_check/: urls.py  views.py
interventions_templates/: 30day-declutter.json  30day-digital-declutter.json
payments/: admin.py  models.py  signals.py  urls.py  views.py
static/: base.css  toast.js
surveys/: admin.py  apps.py  forms.py  models.py  seed.py  services.py  test_surveysection_migration.py  urls.py  views.py
templates/: 404.html  500.html  base.html  base_nocontent.html
(+96 files in other folders)
