[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-minimalist-cohorts"
version = "0.1.0"
description = "30-Day Digital Declutter Cohort Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "django-allauth>=0.57.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.1.0",
    "stripe>=7.0.0",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
    "pytz>=2023.3", # timezone support
    "debugpy>=1.8.0", # for debugging in Docker
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2.0",
    "ipython>=8.17.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "S",   # flake8-bandit (security)
]

ignore = [
    "S101",  # Use of assert (common in Django)
    "DJ001", # Null=True on string fields (sometimes needed)
]

exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "staticfiles",
    "media",
]

[tool.ruff.per-file-ignores]
"**/settings/*.py" = ["F405", "F403"]
"**/migrations/*.py" = ["E501"]

[tool.ruff.isort]
known-first-party = ["accounts", "cohorts", "checkins", "surveys", "dashboard", "payments", "config"]

[tool.pyright]
include = ["accounts", "cohorts", "checkins", "surveys", "dashboard", "payments", "config"]
exclude = ["**/migrations", "**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
